--- a/TODO
+++ b/TODO
@@ -1,8 +1,11 @@
 ## TODO
 
-  * Publish to YouTube - work in progress with Martin
-  * Publish to Wordpress
-  * Publish to Discourse?
-  * Publish to Reddit
-  * Publish to Telegram
+  * Use argparse to take a single .ini file as an argument.
+  * Validate the ConfigObj configuration.
+  * Code is brittle, needs some error checking.
+  * Configuration to control what encodes/uploads are enabled.
+  * Publish to Wordpress.
+  * Publish to Telegram using python-telegram-bot.
+  * Publish to Reddit.
+  * Publish to Discourse.
 
