--- a/TODO
+++ b/TODO
@@ -1,8 +1,7 @@
 ## TODO
 
   * Use argparse to take a single .ini file as an argument.
+  * If file path config entries start with `~/` then correctly expand the home directory.
   * Validate the ConfigObj configuration.
-  * Code is brittle, needs some error checking.
-  * Configuration to control what encodes/uploads are enabled.
+  * Code is brittle, needs error checking added throughout.
   * Publish to Wordpress.
-
