--- a/TODO
+++ b/TODO
@@ -17,3 +17,14 @@ Perhaps adding an option to overlay a sound wave would be nifty.
 The folowing produces a sound wave only but doesn't overlay on the still.
 
     ffmpeg -i audio.wav -filter_complex showwaves=s=854x480:mode=line -i picture.png -c:v libx264 -preset fast -tune stillimage -c:a aac -strict experimental -b:a 160k -shortest -pix_fmt yuv420p video.mkv
+
+
+## Building a snap in Launchpad
+
+Currently fails:
+
+  * https://launchpadlibrarian.net/293648430/buildlog_snap_ubuntu_xenial_amd64_podpublish_BUILDING.txt.gz
+
+Even when setup.py doesn't request any requirements.
+
+  * https://git.launchpad.net/podpublish/commit/?id=edd30ec9016840e870f1c8e4c2fca516231b351b
